tests/ui/enum-discriminant/ice-from-type-error-issue-148515.stderr
error[E0425]: cannot find type `Foo` in this scope
  --> $DIR/ice-from-type-error-issue-148515.rs:7:34
   |
LL | fn test1(x: impl Iterator<Item = Foo>) {
   |                                  ^^^ not found in this scope

error[E0425]: cannot find type `Foo` in this scope
  --> $DIR/ice-from-type-error-issue-148515.rs:12:34
   |
LL | fn test2(_: impl Iterator<Item = Foo>) {
   |                                  ^^^ not found in this scope

error[E0600]: cannot apply unary operator `-` to type `u8`
  --> $DIR/ice-from-type-error-issue-148515.rs:14:12
   |
LL |     0u8 == -3;
   |            ^^ cannot apply unary operator `-`
   |
   = note: unsigned values cannot be negated

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0425, E0600.
For more information about an error, try `rustc --explain E0425`.
